crates/mcb-server/tests/contract/snapshots/contract__agent_contract_tests__agent_invalid_args.snap
---
source: crates/mcb-server/tests/contract/agent_contract_tests.rs
expression: "snapshot_payload(&request, status, &response)"
---
{
  "request": {
    "jsonrpc": "2.0",
    "method": "tools/call",
    "params": {
      "name": "log_tool_call",
      "arguments": {
        "data": 123
      }
    },
    "id": 1
  },
  "status": 200,
  "response": {
    "jsonrpc": "2.0",
    "error": {
      "code": -32602,
      "message": "session_id is required (not resolved from context)"
    },
    "id": 1
  }
}
